<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.TaskCreationActivity"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_title"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/default_task_title" />

    <EditText
        android:id="@+id/edit_description"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:hint="@string/default_task_description" />

    <CheckBox
        android:id="@+id/edit_isDone"
        android:layout_width="40dp"
        android:layout_height="40dp" />

    <Button
        android:id="@+id/edit_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/choose_date"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/edit_done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/done" />


</LinearLayout>