<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.TaskDetails">

    <TextView
        android:id="@+id/task_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_task_title"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/task_Description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20sp"
        android:text="@string/default_task_description"
        android:textSize="30dp"
        app:layout_constraintTop_toBottomOf="@id/task_Title" />

    <TextView
        android:id="@+id/creation_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_creation_date"
        android:textSize="25dp"
        app:layout_constraintTop_toBottomOf="@id/task_Description" />

    <TextView
        android:id="@+id/end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/default_end_date"
        android:textSize="25dp"
        android:layout_marginLeft="20dp"
        app:layout_constraintLeft_toRightOf="@id/creation_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/creation_date"/>


</android.support.constraint.ConstraintLayout>